--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "glitchbitch",
   "version": "1.0.0",
   "description": "video player and computer",
-  "main": "index.js",
+  "main": "app/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app/index.js"
   },
   "author": "@oliviacpu",
   "license": "ISC",
